# gh-smartContracts

./: .env  .gitignore  Cargo.toml  README.md  comprehensive_system_test.sh  deploy.sh  dfx.json  distribute_interest.sh  generate_sample_loader.py  green-heroes-project.json  ic.config.json  load_data.sh  load_sample_data.sh  load_test_curriculum.sh  metadata_output.txt  package-lock.json  package.json  tasks.md  test_flow.sh  test_quiz_flow.sh  test_report.md  update_frontend.sh
docs/: ADMIN_ACTIONS.md  ADVANCED_INTEREST_FLOW.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  ARCHIVE_CANISTER_ARCHITECTURE.md  ARCHIVE_TESTING_GUIDE.md  BOARD_MEMBER_SHARE_CALCULATIONS.md  BOARD_MEMBER_VOTING_POWER.md  CAPACITY_AND_COSTS.md  CLAIM_REWARDS_EXPLAINED.md  DEPLOYMENT.md  DEX_INTEGRATION.md  FRONTEND_AUTH_FLOW.md  FRONTEND_INTEGRATION.md  FRONTEND_UPDATE_PROMPT.md  GOVERNANCE_PLAN.md  ICO_STRATEGY.md  IDENTITY_RECOVERY_STRATEGIES.md  INTEREST_FLOW.md  MULTISIG_EXPLAINED.md  MULTISIG_IMPLEMENTATION_OPTIONS.md  PROPOSAL_VOTING_FLOW.md  QUICK_REF.md  QUIZ_CACHING_IMPLEMENTATION_PLAN.md  README.md  STAKING_MECHANICS.md  TESTING_GUIDE.md  TOKEN_DECIMALS_DECISION.md  TREASURY_IMPLEMENTATION_PLAN.md  VERIFICATION.md  architecture_ascii.md  architecture_diagram.md  per-batch-penalty.md  scalability_plan.md
scripts/: deploy.sh  deploy_full.sh  deploy_with_archives.sh  test_archive.sh  test_archive_phase2.sh  test_archiving_audit.sh  test_autonomous_hub.sh  (+25 more)
src/ico_canister/: Cargo.toml  ico_canister.did
src/ico_canister/src/: constants.rs  lib.rs  service.rs  state.rs  types.rs
(+258 files in other folders)
