[package]
name = "ico_canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-macros = "0.17"
serde = { version = "1.0", features = ["derive"] }
ic-ledger-types = "0.8"
icrc-ledger-types = "0.1.1"
ic-stable-structures = "0.6"

